[package]
name = "vents"
version = "0.5.1"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Events system"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/vents"
repository = "https://github.com/VladasZ/vents"

[dependencies]
log = "0.4"
chrono = "0.4"
tokio = { version = "1.37", features = ["full"] }
