[package]
name = "vents"
version = "0.9.1"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Events system"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/vents"
repository = "https://github.com/VladasZ/vents"

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
log = "0.4"
chrono = "0.4"
tokio = { version = "1.47", features = ["full"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
