[package]
name = "vents"
version = "0.14.0"
edition = "2024"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Events system"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/vents"
repository = "https://github.com/VladasZ/vents"

[features]
default = []

[dependencies]
log = "0.4"
hreads = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
plat = "0.6"
